# FFUtils

./: .gitignore  CMakeLists.txt
7.1/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
FFUtils/: FFReader.cpp  FFReader.hpp  FFWriter.cpp  FFWriter.hpp  main.cpp  remux.c  transcode.c  transcode.h
FFUtils.xcodeproj/: project.pbxproj
FFUtils.xcodeproj/project.xcworkspace/xcuserdata/liudongxu.xcuserdatad/: UserInterfaceState.xcuserstate
FFUtils.xcodeproj/project.xcworkspace/xcuserdata/mac-mini.xcuserdatad/: UserInterfaceState.xcuserstate
FFUtils.xcodeproj/xcshareddata/xcschemes/: FFUtils.xcscheme
FFUtils.xcodeproj/xcuserdata/liudongxu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
FFUtils.xcodeproj/xcuserdata/mac-mini.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
FFUtils.xcodeproj/xcuserdata/mac-mini.xcuserdatad/xcschemes/: xcschememanagement.plist
